odin-launcher.reload.log


Build succeeded, launching vk...
DEBUG: Initializing GLFW platform
DEBUG: GLFW platform setup complete
Validation layer: linux_read_sorted_physical_devices:
Validation layer:      Original order:
Validation layer:            [0] NVIDIA GeForce RTX 4070 Laptop GPU
Validation layer:      Sorted order:
Validation layer:            [0] NVIDIA GeForce RTX 4070 Laptop GPU  
Validation layer: Copying old device 0 into new device 0
Validation layer: linux_read_sorted_physical_devices:
Validation layer:      Original order:
Validation layer:            [0] NVIDIA GeForce RTX 4070 Laptop GPU
Validation layer:      Sorted order:
Validation layer:            [0] NVIDIA GeForce RTX 4070 Laptop GPU  
Validation layer: Copying old device 0 into new device 0
Validation layer: linux_read_sorted_physical_devices:
Validation layer:      Original order:
Validation layer:            [0] NVIDIA GeForce RTX 4070 Laptop GPU
Validation layer:      Sorted order:
Validation layer:            [0] NVIDIA GeForce RTX 4070 Laptop GPU  
Validation layer: Copying old device 0 into new device 0
Validation layer: linux_read_sorted_physical_devices:
Validation layer:      Original order:
Validation layer:            [0] NVIDIA GeForce RTX 4070 Laptop GPU
Validation layer:      Sorted order:
Validation layer:            [0] NVIDIA GeForce RTX 4070 Laptop GPU  
Validation layer: Copying old device 0 into new device 0
Validation layer: Removing driver /usr/lib/libvulkan_intel.so due to not having any physical devices
Validation layer: Removing driver /usr/lib/libvulkan_intel_hasvk.so due to not having any physical devices
Validation layer: Inserted device layer "VK_LAYER_KHRONOS_validation" (libVkLayer_khronos_validation.so)
Validation layer: Failed to find vkGetDeviceProcAddr in layer "libVkLayer_MESA_device_select.so"
Validation layer: vkCreateDevice layer callstack setup to:
Validation layer:    <Application>
Validation layer:      ||
Validation layer:    <Loader>
Validation layer:      ||
Validation layer:    VK_LAYER_KHRONOS_validation
Validation layer:            Type: Explicit
Validation layer:            Enabled By: By the Application
Validation layer:            Manifest: /usr/share/vulkan/explicit_layer.d/VkLayer_khronos_validation.json
Validation layer:            Library:  libVkLayer_khronos_validation.so
Validation layer:      ||
Validation layer:    <Device>
Validation layer:        Using "NVIDIA GeForce RTX 4070 Laptop GPU" with driver: "libGLX_nvidia.so.0"
compiling shader:
compiling shader:
compiling shader:
Discovered 2 shaders: compute.hlsl graphics.hlsl 
Window resized to 1856x656
compiling shader:
compiling shader:
compiling shader:
Recompiling graphics.hlsl
compiling shader:
compiling shader:
compiling shader:
compiling shader:
compiling shader:
compiling shader:
compiling shader:
Recompiling graphics.hlsl
compiling shader:
compiling shader:
compiling shader:
compiling shader:
compiling shader:
compiling shader:
compiling shader:
Recompiling graphics.hlsl
compiling shader:
compiling shader:
compiling shader:
compiling shader:
compiling shader:
compiling shader:
compiling shader:
Recompiling graphics.hlsl
compiling shader:
graphics.hlsl:196:27: error: use of undeclared identifier 'color'
    float luminance = dot(color, LUMA);
                          ^
graphics.hlsl:198:5: error: use of undeclared identifier 'color'
    color = painterly_shade(color, q);
    ^
graphics.hlsl:198:29: error: use of undeclared identifier 'color'
    color = painterly_shade(color, q);
                            ^
graphics.hlsl:213:19: error: use of undeclared identifier 'color'
    return float4(color, accumDensity);
                  ^

graphics.hlsl:196:27: error: use of undeclared identifier 'color'
    float luminance = dot(color, LUMA);
                          ^
graphics.hlsl:198:5: error: use of undeclared identifier 'color'
    color = painterly_shade(color, q);
    ^
graphics.hlsl:198:29: error: use of undeclared identifier 'color'
    color = painterly_shade(color, q);
                            ^
graphics.hlsl:213:19: error: use of undeclared identifier 'color'
    return float4(color, accumDensity);
                  ^

Failed: graphics.hlsl
Recompiling graphics.hlsl
compiling shader:
compiling shader:
compiling shader:
compiling shader:
compiling shader:
compiling shader:
compiling shader:
Recompiling graphics.hlsl
compiling shader:
compiling shader:
compiling shader:
compiling shader:
compiling shader:
compiling shader:
compiling shader:
Recompiling graphics.hlsl
compiling shader:
compiling shader:
compiling shader:
compiling shader:
compiling shader:
compiling shader:
compiling shader:
Recompiling graphics.hlsl
compiling shader:
graphics.hlsl:189:24: error: use of undeclared identifier 'lerp'
    float3 baseColor = lerp(center_sample.rgb, filtered.rgb);
                       ^

graphics.hlsl:189:24: error: use of undeclared identifier 'lerp'
    float3 baseColor = lerp(center_sample.rgb, filtered.rgb);
                       ^

Failed: graphics.hlsl
Recompiling graphics.hlsl
compiling shader:
compiling shader:
compiling shader:
compiling shader:
compiling shader:
compiling shader:
compiling shader:
Recompiling graphics.hlsl
compiling shader:
compiling shader:
compiling shader:
compiling shader:
compiling shader:
compiling shader:
compiling shader:
Recompiling graphics.hlsl
compiling shader:
graphics.hlsl:186:47: error: use of undeclared identifier 'filtered'
    float accumDensity = max(center_sample.a, filtered.a);
                                              ^

graphics.hlsl:186:47: error: use of undeclared identifier 'filtered'
    float accumDensity = max(center_sample.a, filtered.a);
                                              ^

Failed: graphics.hlsl
Recompiling graphics.hlsl
compiling shader:
graphics.hlsl:186:47: error: use of undeclared identifier 'filtered'
    float accumDensity = max(center_sample.a, filtered.a);
                                              ^

graphics.hlsl:186:47: error: use of undeclared identifier 'filtered'
    float accumDensity = max(center_sample.a, filtered.a);
                                              ^

Failed: graphics.hlsl
Shader source missing: graphics.hlsl
Warning: graphics.hlsl not in registry
Window resized to 3736x2056
compiling shader:
compiling shader:
compiling shader:
Window resized to 1856x656
compiling shader:
compiling shader:
compiling shader:
Window resized to 3736x2056
compiling shader:
compiling shader:
compiling shader:
Window resized to 1856x656
compiling shader:
compiling shader:
compiling shader:
Window resized to 3736x2056
compiling shader:
compiling shader:
compiling shader:
Window resized to 1856x656
compiling shader:
compiling shader:
compiling shader:
Cleaning up GLFW...
